@@ -20,7 +20,7 @@
             "rct2.scenery_small.tghc",
             "$DAT:00000002|GWTRGHC ",
             "rct2.scenery_small.tac",
-            "$DAT:00000002|GWTRAC  ",
+            "fidwell.scenery_small.tac",
             "rct2.scenery_small.tghc2",
             "$DAT:00000002|GWTRHT  ",
             "rct2.scenery_small.tcj",
