@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tac",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 20,
+        "removalPrice": 10,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 112,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true,
+        "isTree": true,
+        "shape": "1/4",
+        "SMALL_SCENERY_FLAG_VOFFSET_CENTRE": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -16, "y": -113 },
+      { "path": "images/1.png", "x": -16, "y": -107 },
+      { "path": "images/2.png", "x": -16, "y": -109 },
+      { "path": "images/3.png", "x": -16, "y": -112 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Arizona Cypress Tree",
+            "fr-FR": "Cyprès",
+            "de-DE": "Arizona-Zypressenbaum",
+            "es-ES": "Ciprés de Arizona",
+            "it-IT": "Cipresso dell’Arizona",
+            "nl-NL": "Cipres uit Arizona",
+            "sv-SE": "Arizona-cypress",
+            "ko-KR": "애리조나삼목",
+            "zh-CN": "亚利桑那柏树",
+            "zh-TW": "亞利桑那柏樹",
+            "pt-BR": "Árvore Cipreste-do-Arizona",
+            "cs-CZ": "Cypřiš",
+            "ja-JP": "アリゾナ糸杉",
+            "pl-PL": "Arizoński cyprys",
+            "ru-RU": "Аризонский Кипарис",
+            "eo-ZZ": "Arizona Cipresarbo",
+            "ca-ES": "Xiprer d’Arizona",
+            "fi-FI": "Arizonansypressi"
+        }
+    }
+}
